src/test/ui/async-await/partial-initialization-across-await.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: assign to part of possibly uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:15:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^ use of possibly uninitialized `t`

error[E0381]: assign to part of possibly uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:24:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^ use of possibly uninitialized `t`

error[E0381]: assign to part of possibly uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:33:5
   |
LL |     t.x = 42;
   |     ^^^^^^^^ use of possibly uninitialized `t`
=======
error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:13:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^ use of possibly-uninitialized `t`

error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:22:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^ use of possibly-uninitialized `t`

error[E0381]: assign to part of possibly-uninitialized variable: `t`
  --> $DIR/partial-initialization-across-await.rs:31:5
   |
LL |     t.x = 42;
   |     ^^^^^^^^ use of possibly-uninitialized `t`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0381`.
